listings/ch04-understanding-ownership/no-listing-04-cant-use-after-move/output.txt
$ cargo run
   Compiling ownership v0.1.0 (file:///projects/ownership)
error[E0382]: borrow of moved value: `s1`
              (ムーブされた値の借用: `s1`)
 --> src/main.rs:5:28
  |
2 |     let s1 = String::from("hello");
  |         -- move occurs because `s1` has type `String`, which does not implement the `Copy` trait
  |            (`s1`は`String`型を持ち、これは`Copy`トレイトを実装していないので、ムーブが発生します)
3 |     let s2 = s1;
  |              -- value moved here
  |                 (ここで値がムーブされました)
4 |
5 |     println!("{}, world!", s1);
  |                            ^^ value borrowed here after move
  |                               (ムーブ後にここで借用されています)
  |
  = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
  |
3 |     let s2 = s1.clone();
  |                ++++++++

For more information about this error, try `rustc --explain E0382`.
error: could not compile `ownership` (bin "ownership") due to 1 previous error
